Fixed menu button not showing in most pages

--- a/css/frontend.css
+++ b/css/frontend.css
@@ -980,14 +980,6 @@ form .btn-group button#submit {
 .nav-menu nav ul li a {
   width: 100%;
   margin: 0;
-  padding: 1rem;
-  font-size: 14.4px;
-}
-@media (min-width: 426px) {
-  .nav-menu nav ul li a {
-    padding: 1rem 2rem;
-    font-size: 16px;
-  }
 }
 .nav-menu .nav-social-media {
   text-align: center;
